Adjust spacing, titles, fix text colours

--- a/app/components/advice_page_list_component/advice_page_list_component.scss
+++ b/app/components/advice_page_list_component/advice_page_list_component.scss
@@ -1,14 +1,16 @@
-.exemplar_school {
-  background-color: $exemplar-school;
-  color: $white;
-}
+.advice-page-list-component {
+  .exemplar_school {
+    background-color: $exemplar-school;
+    color: $white;
+  }
 
-.benchmark_school {
-  background-color: $benchmark-school;
-  color: $white;
-}
+  .benchmark_school {
+    background-color: $benchmark-school;
+    color: $white;
+  }
 
-.other_school {
-  background-color: $other-school;
-  color: $white;
+  .other_school {
+    background-color: $other-school;
+    color: $white;
+  }
 }
